test/error/rtc/con1.rzy
// error: loop in connection graph for sub

component
  Dummy
    slot   inp();
    signal out();
      
  implementation elementary
    slot inp()
      out();
    end
  end

  Con1
    slot   inp();
    signal out();
      
  implementation composition
    component
      sub : Dummy;
      
    connection
      inp -> out;
      sub.out -> sub.inp;

  end

